$Id: History,v 1.1 1999-01-08 16:35:22 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 09 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
14 Dec. 1998 Hisaya
- Added Tst09TrackingAction for adding polarization for gammas

30th November 1998  John Allison
- Copied from test02 with a physics list for polarised Compton,
  G4PhotoAbsorption and synchrotron radiation.