@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:22 gunter Exp $
+$Id: History,v 1.2 1999-04-17 07:46:56 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,14 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst09PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst09RunAction
+- Modify PreUserTrackingAction() in Tst09TrackingAction
+- Modify UserSteppingAction() in Tst09SteppingAction
+
+
 14 Dec. 1998 Hisaya
 - Added Tst09TrackingAction for adding polarization for gammas
 
